# ledgerline

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: bank.csv  ledger.csv
src/ledgerline/: __init__.py  cli.py  io.py  models.py  reconciler.py  rules.py
tests/: test_io.py  test_reconciler.py  test_rules.py
