[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerline"
version = "0.1.0"
description = "LedgerLine — a TDD-first bank reconciliation MVP in Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Matthew J. Gagnon"}]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "black>=24.0.0",
]

[project.scripts]
ledgerline = "ledgerline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ledgerline"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
target-version = ["py311"]
line-length = 100
